# ds-c

./: CMakeLists.txt  README.md  array.c  block.c  block.h  dyn  dynamic_list_test.c  list.c  list.h  memory_block.c  memory_block.h  test.c  utils.c  utils.h
include/: block.h  list.h  memory_block.h  utils.h
